tests/errors/layout/recursion/mutually_recursive_structs_by_value_errors.err.expected
error: at 3:16: [LAY-RecursiveTypeByValue] type 'B' is recursive by value (cycle: B, A). Break the cycle by wrapping a field/variant payload in a reference.
   |
 3 |         struct B { a: A }
   |                ^
